# SiMP

./: README.md  pyproject.toml  vlc.pyi
src/simp/: __main__.py  vlc_backend.py
tests/: test_vlc_backend.py
typings/: vlc.pyi
